# vibe-courseware

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  run.py
migrations/: env.py
scripts/: init_db.py
src/vibe_courseware/: __init__.py  main.py
src/vibe_courseware/api/: __init__.py  api.py  deps.py
src/vibe_courseware/api/endpoints/: auth.py  courses.py  lessons.py  modules.py  users.py
src/vibe_courseware/config/: __init__.py  settings.py
src/vibe_courseware/db/: __init__.py  session.py
src/vibe_courseware/models/: __init__.py  base.py  course.py  lesson.py  module.py  user.py
src/vibe_courseware/services/: __init__.py  base_service.py  course_service.py  lesson_service.py  module_service.py  user_service.py
src/vibe_courseware/utils/: pagination.py  security.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py
